<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="line">--------</string>
    <string name="app_name">OneKey</string>
    <string name="settings">Settings</string>
    <string name="check">Check/Activate BixinKey</string>
    <string name="message_manager">Message manager</string>
    <string name="language">Language</string>
    <string name="server_setting">Network</string>
    <string name="transaction_setting">Transaction settings</string>
    <string name="service_online">Onling service</string>
    <string name="about">About terms of usage</string>
    <string name="zh_simple">中文（简体）</string>
    <string name="zh_traditional">Chinese (Traditional)</string>
    <string name="en">English</string>
    <string name="korean">Korean</string>
    <string name="japanese">Japanese</string>
    <string name="arrows">Left arrow</string>
    <string name="hardware_i">Hardware information</string>
    <string name="seq">Device ID</string>
    <string name="hardware">Firmware version</string>
    <string name="hardware_v">Hardware version (upgrade)</string>
    <string name="address">Address</string>
    <string name="use_bixin_s">Use Bixin server</string>
    <string name="prompt">Using Bixin server enables transaction information syncing among co-signers</string>
    <string name="rbf">Use RBF (transaction substitute)</string>
    <string name="use_unconfirmed">Spend unconfirmed input</string>
    <string name="use_change">Use change address</string>
    <string name="boot_message">I\'ve read and agreed (to terms of usage)</string>
    <string name="create">Create wallet</string>
    <string name="import_w">Multi-institution vaults</string>
    <string name="introduce">Introduction to BixinKey</string>
    <string name="introduce_detials">1. BixinKey is a hardware wallet for Bitcoin, where private keys will never have internet exposure \n 2. BixinKey is open-source \n 3. BixinKey has a display so that payment can be confirmed both ways, making your assets safer \n 4. BixinKey\'s card like design is more user friendly, making it easier to use or to keep \n 5. BixinKey uses military level chips \n 6. BixinKey does not support private key export. If you do not need multiple signers, you can set 1-of-2 multi-sig; so when a BixinKey is lost, you can use the backup BixinKey for transactions or asset transfers \n 7. We advise you to buy more than 2 BixinKeys, purchase address</string>
    <string name="active">Activate BixinKey</string>
    <string name="active_prompt">BixinKey not activated</string>
    <string name="prompt_touch">Make hardware wallet touch the phone</string>
    <string name="touch_fail">Connection failed, please doublecheck settings</string>
    <string name="retry">Retry</string>
    <string name="touch_fail_text">1. Only hardware devices of Bixin\'s BixinKey are supported \n  2. Please make sure the phone supports NFC, and NFC permission has been given to the software \n 3. Please make the card touch the phone</string>
    <string name="pin_setting_first">Please set safety password for your BixinKey</string>
    <string name="confirm_pin">Please re-enter the safety password you set</string>
    <string name="touch_again">Make hareware wallet touch with phone</string>
    <string name="connect">Hardware connection success</string>
    <string name="set_pin_processinfo">Pin code set successfully</string>
    <string name="activing_processinfo">Activating device</string>
    <string name="back">Return</string>
    <string name="success">Activation success</string>
    <string name="import_mutiSig">Import multi-sig wallet</string>
    <string name="method_one">Method 1: Using hardware device</string>
    <string name="method_one_prompt">Make BixinKey touch phone</string>
    <string name="recommend">Recommend</string>
    <string name="import_by_address">Import wallet by using address</string>
    <string name="method_two">Method 2: Enter public address</string>
    <string name="import_address">Enter public address</string>
    <string name="input_address">Please enter address</string>
    <string name="scaning">Scan</string>
    <string name="paste">Paste</string>
    <string name="confirm">Confirm</string>
    <string name="select_multisig">Select multi-sig wallet</string>
    <string name="cosigner_num_select">Set cosigner</string>
    <string name="select_mutisig">Select multi-sig wallet</string>
    <string name="wallet_name">Multi-sig wallet 1</string>
    <string name="create_multisig">Create multi-sig wallet</string>
    <string name="select">Please select</string>
    <string name="select_cosigner">Set co-signers</string>
    <string name="select_sig_num">Set number of co-signers</string>
    <string name="next">Next step</string>
    <string name="input_here">Please enter</string>
    <string name="set_wallet_name">Set wallet name</string>
    <string name="add_cosigner">Add co-signer</string>
    <string name="add">Tap to add</string>
    <string name="complete">Finished (0–5)</string>
    <string name="create_successful">Wallet created</string>
    <string name="enter_wallet">Open wallet</string>
    <string name="transaction_records">History</string>
    <string name="send">Send</string>
    <string name="create_trans">Create</string>
    <string name="send2many">Send to many</string>
    <string name="signature">Sign</string>
    <string name="confirm_trans_d">Confirm transaction info</string>
    <string name="receive">Receive</string>
    <string name="share">Share</string>
    <string name="main">Homepage</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Remark</string>
    <string name="limit">0/20</string>
    <string name="btc">mBTC</string>
    <string name="count">0/20</string>
    <string name="fee">Fees</string>
    <string name="total">Total number of transactions</string>
    <string name="to">To address</string>
    <string name="from">Sending address</string>
    <string name="multi_sig">Multi-sig wallet</string>
    <string name="to_num">addresses</string>
    <string name="amount">Amount to transfer</string>
    <string name="need_more">Single address not enough?</string>
    <string name="prompt_sig">The existing transaction information can be obtained by inputting transaction message</string>
    <string name="raw">Enter TX message</string>
    <string name="import_file">File importing</string>
    <string name="signature_trans">Sign transaction</string>
    <string name="confirm_on_hardware">Confirmed on hardware</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="sign_again">Sign again</string>
    <string name="pin_input">Please enter PIN code</string>
    <string name="active_successful">Activation success</string>
    <string name="clear">Clear</string>
    <string name="strguidefirst">Hardware wallet, with private keys never exposed online</string>
    <string name="strguidesecond">Multi-signature，strengthening security for your assets</string>
    <string name="use_hardware">Use hardware device</string>
    <string name="format_iswrong">Name format error, number of signatures required cannot be bigger than the number of co-signers</string>
    <string name="dowbke_to_exit">Press again to exit program</string>
    <string name="dongt_isnull">Wallet name, co-signer numbers, necessary signatures must all be filled out</string>
    <string name="bixinmoney">Introduction to BixinKey</string>
    <string name="copy_self">Copy</string>
    <string name="address_qr">Address QR code</string>
    <string name="attention">Notice: the address supports only bitcoin depositing, other cryptos deposited to the address will be lost</string>
    <string name="prompt_message">Please confirm info below on BixinKey before tapping "OK" button</string>
    <string name="picture">this is a picture</string>
    <string name="wallet_create_successful">Wallet created</string>
    <string name="balance">Wallet balance</string>
    <string name="close">Close</string>
    <string name="wallet_list">Wallet list</string>
    <string name="add_">Add</string>
    <string name="no_records">No record</string>
    <string name="tips">TIPS: Co-signers are all managers</string>
    <string name="prompt_create">Wallet created, refer to image for your receiving address</string>
    <string name="watting_broadcast">To propagate</string>
    <string name="signature_status">Signature</string>
    <string name="transaction_status">Status</string>
    <string name="transaction_waitting">Unsigned</string>
    <string name="pin_input_again">Incorrect info, please enter again</string>
    <string name="slip_select_fee">Slide to choose miner fees</string>
    <string name="multi_type" translatable="false">2-3</string>
    <string name="boot_page_dot">dot</string>
    <string name="dontbig">Number of signatures cannot be bigger than number of co-signers</string>
    <string name="dontsmall">Number of co-signers cannot be less than number of signatures</string>
    <string name="inoutnum">Enter amount to transfer</string>
    <string name="moreinput_text">Enter 20 characters at most</string>
    <string name="moreinput_text_fixbixinkey">Enter 16 characters at most</string>
    <string name="please_input_walletname">Enter wallet name</string>
    <string name="set_backup_pass">Set backup password</string>
    <string name="backup_input_type">Only numbers and letters can be entered</string>
    <string name="set__pass">Set password</string>
    <string name="create_">create</string>
    <string name="copy_mnemonics">Be ready to copy your mnemonics</string>
    <string name="ready_go">Get ready to go</string>
    <string name="no_hand_write">I don\'t want to copy mnemonics？</string>
    <string name="copy_to_other_device">Backup to another hardware wallet (Advanced) -> </string>
    <string name="backup_wallet_tip2">The only way to protect your assets is to make proper backup.</string>
    <string name="get_info_by_cold_wallet_hide">Data transfer takes a while, and your device is next to your phone.</string>
    <string name="recovery_process">Processing...</string>
    <string name="connecting_device">Connecting device</string>
    <string name="get_auth_sign">Get security signature</string>
    <string name="push_auth_sign">Submit anti-counterfeiting verification information</string>
    <string name="export_tip">Export tips</string>
    <string name="export_tip1">To master the private data of the wallet means to master the wallet asset itself. Please</string>
    <string name="export_tip2">1. Prepare paper and pen, copy carefully, and keep it in a safe place after confirmation</string>
    <string name="export_tip3">2. Please do not take screenshots! Photo albums are easy to access with other mobile apps</string>
    <string name="export_tip4">3. OneKey does not store any private key. Once the private key is lost, it cannot be retrieved</string>
    <string name="i_know">Export</string>
    <string name="easy_to_identy">Easy to identify</string>
    <string name="connectting">Connecting devices</string>
    <string name="select_btc_type">Select the BTC address type</string>
    <string name="select_tip">The address type cannot be changed after selection, it is recommended to use compatible quarantine witness SegWit.</string>
    <string name="compatible_segwit">Compatible isolation witness SegWit</string>
    <string name="segwit_infor">Start with 3, widely popular, low transfer fee</string>
    <string name="native_segwit">Native isolation bears witness to the Native SegWit</string>
    <string name="native_segwit_infor">Starting with BC1, it is becoming more popular and has the lowest transfer fees</string>
    <string name="normal_segwit">Legacy general address</string>
    <string name="normal_segwit_info">Start with 1, comprehensive popularity, transfer charges medium</string>
</resources>