<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/white_back_tuo"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/export_tip"
            android:textColor="@color/text_two"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/export_tip1"
            android:textColor="@color/text_two"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/export_tip2"
            android:textColor="@color/text_two"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/export_tip3"
            android:textColor="@color/text_two"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/export_tip4"
            android:textColor="@color/text_two"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/backup_wallet_tip2"
            android:textColor="@color/text_two"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/dp_30"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@drawable/gray_stoken"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/text_two"
                android:textSize="@dimen/sp_16" />


            <Button
                android:id="@+id/btn_i_know"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_25"
                android:layout_weight="1"
                android:background="@drawable/green_tuo"
                android:text="@string/i_know"
                android:textAllCaps="false"
                android:textColor="@color/button_bk_ddake"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_cancel"
        android:layout_width="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_height="@dimen/dp_40"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp_15"
        android:padding="@dimen/dp_14"
        android:src="@drawable/close_dark_small" />

</RelativeLayout>
