<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_30"
        android:paddingTop="@dimen/dp_20"
        android:paddingRight="@dimen/dp_30"
        android:paddingBottom="@dimen/dp_20"
        android:text="@string/set_wallet_name"
        android:textColor="#142A3B"
        android:textSize="30sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:text="@string/easy_to_identy"
        android:textColor="#142A3B"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/device_name"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_60"
        android:maxLength="15"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/please_input_walletname"
        android:paddingHorizontal="@dimen/dp_24"/>


    <Button
        android:id="@+id/btn_create"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_30"
        android:enabled="false"
        android:background="@drawable/btn_enable_selector"
        android:text="@string/create_"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14" />

</LinearLayout>