<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_51"
        android:text="@string/connecting_device"
        android:textColor="#142A3B"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="K1731"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_no_check"
        android:paddingHorizontal="13dp"
        android:layout_marginVertical="@dimen/dp_5"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_21"
        android:text="@string/get_info_by_cold_wallet_hide"
        android:textColor="#142A3B"
        android:textSize="@dimen/sp_14" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/way_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="100dp"
            android:src="@drawable/link_via_ble" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/dark_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/recovery_process" />

        <org.haobtc.onekey.ui.custom.LoadingTextView
            android:id="@+id/connecting_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            app:text="@string/connectting" />


        <org.haobtc.onekey.ui.custom.LoadingTextView
            android:id="@+id/retrieve_verify_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/get_auth_sign" />


        <org.haobtc.onekey.ui.custom.LoadingTextView
            android:id="@+id/commit_verify_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            app:text="@string/push_auth_sign" />


    </LinearLayout>


</LinearLayout>