<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:padding="@dimen/dp_5"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:text="@string/prompt_touch"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="343dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:background="@drawable/touch_with_hardware"
        android:contentDescription="@string/picture" />

</RelativeLayout>