<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/status_text"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="org.haobtc.keymanager.activities.settings.recovery_set.SetBackupPassActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:navigationIcon="@drawable/back">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_marginEnd="15.3dp"
            android:contentDescription="@string/back"
            android:padding="8dp"

            android:src="@drawable/back" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingStart="@dimen/dp_30"
        android:paddingEnd="@dimen/dp_50"
        android:text="@string/set_backup_pass"
        android:textColor="@color/text_color"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_30"
        android:paddingStart="@dimen/dp_30"
        android:paddingEnd="@dimen/dp_50"
        android:text="@string/backup_input_type"
        android:textColor="@color/light_text"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/gray_tuo_6">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/set__pass"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_100"
        android:enabled="false"
        android:background="@drawable/button_bk_grey"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>
